--- a/platformio.ini
+++ b/platformio.ini
@@ -12,8 +12,8 @@
 platform = renesas-ra
 board = uno_r4_wifi
 framework = arduino
-
 lib_deps = 
 	dawidchyrzynski/home-assistant-integration@^2.0.0
-	arduino-libraries/Ethernet@^2.0.2
-	bblanchon/ArduinoJson@^7.0.2
+	;arduino-libraries/Ethernet@^2.0.2
+	;bblanchon/ArduinoJson@^7.0.2
+	;arduino-libraries/WiFiNINA@^1.8.14
